--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,11 @@
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+
+## Environment Properties
+
 # The Minecraft version must agree with the Forge version to get a valid artifact
 minecraft_version=1.21
 # The Minecraft version range can use any release version of Minecraft as bounds.
@@ -9,9 +15,9 @@ minecraft_version_range=[1.21,1.22)
 # The Forge version must agree with the Minecraft version to get a valid artifact
 forge_version=51.0.26
 # The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[51,)
+forge_version_range=[0,)
 # The loader version range can only use the major version of Forge/FML as bounds
-loader_version_range=[51,)
+loader_version_range=[0,)
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
@@ -30,20 +36,24 @@ mapping_channel=official
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
 mapping_version=1.21
+
+
+## Mod Properties
+
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=wompwomp
+mod_id=simpletogglesprint
 # The human-readable display name for the mod.
 mod_name=wompwomp
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=Unlicense
 # The mod version. See https://semver.org/
-mod_version=1.0-SNAPSHOT
+mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=dev.yuro
+mod_group_id=dev.yuro.wompwomp
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=
+mod_authors=yuro
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
